--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==3.1.0
 cryptography==41.0.1
 Django==4.2.1
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 firebase-admin==6.1.0
 google-api-core==2.11.0
 google-api-python-client==2.88.0
